# qwe-qwe

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .vault_key  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  agent.py  agent_budget.py  agent_events.py  agent_loop.py  cli.py  commands.py  config.py  db.py  discovery.py  docker-compose.yml  goal_runner.py  goal_validators.py  inference_setup.py  install.sh  logger.py  mcp_client.py  memory.py  memory_store.py  notes.md  orchestrator.py  plan_product_improvements.md  plugin_registry.py  presets.py  pricing.py  providers.py  (+24 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docker.yml  release.yml  test.yml
docs/: AUTO_RESUME.md  BROWSER.md  COST_TRACKING.md  GOALS.md  HARDWARE.md  PRESET_EXAMPLES.md  PRESET_GUIDE.md  PRIVACY.md  PROVIDERS.md  README.md  SKILLS_IMPORT.md  agent-loop-v2-design.md  how-memory-works.md  index.html  knowledge-graph-design.md  ph-launch-checklist.md  ph-slides.html  producthunt.md
docs/adr/: 0001-living-memory.md
docs/specs/: 2026-05-17-native-anthropic-adapter.md
docs/superpowers/plans/: 2026-05-11-per-session-token-analytics.md  2026-05-12-auto-resume-after-interrupt.md
docs/superpowers/specs/: 2026-04-14-qctx-design.md  2026-05-11-per-session-token-analytics-design.md  2026-05-12-auto-resume-after-interrupt-design.md
memory/: meta.json
memory/collection/qwe_qwe/: storage.sqlite
migrations/: 001_initial.sql  002_message_thread_ts_index.sql  003_scheduled_tasks_metrics.sql  004_routine_thread_id.sql  005_routine_runs.sql  007_skill_imports.sql  008_agent_runs.sql  009_interrupted_runs.sql  010_routine_budget.sql  013_goal_outputs.sql  README.md
prompts/: create_finance_skill.md  orchestrator.md  subagent_browser.md  subagent_code.md  subagent_research.md  subagent_scraper.md
schemas/: preset.schema.yaml
scripts/: check_js.py
skills/: __init__.py  browser.py  chrome_browser.py  custom_cowsay.py  finance.py  mcp_manager.py  notes.py  notes_manager.py  serial_port.py  skill_creator.py  skill_import.py  soul_editor.py  spicy_duck.py  timer.py  transactions.py  weather.py  workout_tracker.py
static/: index.html
tests/: _integrity_preset.py  conftest.py  test_acceptance_gate_e2e.py  test_agent_runs.py  test_analytics_api.py  test_anthropic_client.py  test_anthropic_stream.py  test_blog_feed.py  test_browser_per_goal_sessions.py  test_browser_recovery.py  test_browser_skill.py  test_canvas.py  test_commands_registry.py  test_config.py  test_db_protection.py  test_endpoint_consistency.py  test_experience.py  test_goal_auto_attach.py  test_goal_completion_invariants.py  test_goal_outputs.py  test_goal_plan_validation.py  test_goal_runtime.py  test_goal_skill_access.py  test_goal_validators.py  test_goals_api.py  test_goals_ui_contracts.py  test_integration.py  test_integrity_blocks.py  test_json_repair.py  test_loop_detection.py  test_memory_store.py  test_migration_qwe.py  test_migrations.py  test_orchestrator.py  test_path_safety.py  test_plugin_registry.py  test_presets.py  test_pricing.py  test_providers_list.py  test_reliability.py  (+28 more)
tests/fixtures/: litellm_sample.json  worker_shim.py
