[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwe-qwe"
version = "0.16.0"
description = "Lightweight offline AI agent for local models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "cryptography",
    "openai>=1.0.0",
    "qdrant-client>=1.11.0",
    "fastembed>=0.4.0",
    "rich>=13.0.0",
    "readchar>=4.0.0",
    "fastapi>=0.110.0",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "requests>=2.31.0",
    "Pillow>=10.0",
    "pypdf>=4.0",
    "PyYAML>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]
voice = ["faster-whisper>=1.0.0"]

[project.scripts]
qwe-qwe = "cli:main_entry"

[tool.setuptools]
packages = ["skills"]
py-modules = ["cli", "agent", "agent_loop", "agent_events", "agent_budget", "config", "db", "discovery", "inference_setup", "logger", "mcp_client", "memory", "presets", "providers", "rag", "scheduler", "server", "soul", "stt", "synthesis", "tasks", "telegram_bot", "threads", "tools", "tts", "updater", "utils", "vault"]

[tool.setuptools.package-data]
"*" = ["static/**/*", "schemas/*.yaml"]

[tool.setuptools.exclude-package-data]
"*" = ["tests", "tests/*"]
