[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwe-qwe"
version = "0.17.33"
description = "Lightweight offline AI agent for local models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "cryptography",
    "openai>=1.0.0",
    "qdrant-client>=1.11.0",
    "fastembed>=0.4.0",
    "rich>=13.0.0",
    "readchar>=4.0.0",
    "fastapi>=0.110.0",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "requests>=2.31.0",
    "Pillow>=10.0",
    "pypdf>=4.0",
    "PyYAML>=6.0",
    "jsonschema>=4.0",
    # Universal document → Markdown converter (Microsoft). Drives knowledge-base
    # ingestion: URL scraping, PDF / DOCX / PPTX / XLSX / HTML / EPUB / images.
    # We deliberately avoid the [all] extra — it pulls ~115 MB of dead weight we
    # never use: pandas (xlsx — we have an openpyxl fallback in rag._read_xlsx),
    # speech_recognition (we use faster-whisper), azure-ai-documentintelligence
    # (Azure OCR — never called), youtube-transcript-api (broken by YT bot
    # detection — replaced with yt-dlp in v0.17.13). Enumerate the extras we
    # actually need and pin the critical siblings directly so a fresh install
    # never ships a degraded KB pipeline.
    "markitdown[docx,pptx,pdf,outlook]>=0.1.0",
    "python-docx>=1.0",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "mammoth>=1.8",
    "markdownify>=0.14",
    "beautifulsoup4>=4.12",
    "pdfminer.six>=20240706",
    # YouTube transcript fallback: youtube-transcript-api (bundled with markitdown)
    # is frequently broken by YouTube's bot-detection. yt-dlp has the JS-based
    # PotToken workarounds and is actively maintained. rag.index_url() tries
    # yt-dlp first for youtube.com / youtu.be URLs.
    "yt-dlp>=2025.1.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-cov"]
voice = ["faster-whisper>=1.0.0"]

[project.scripts]
qwe-qwe = "cli:main_entry"

[tool.setuptools]
packages = ["skills"]
py-modules = ["cli", "agent", "agent_loop", "agent_events", "agent_budget", "config", "db", "discovery", "inference_setup", "logger", "mcp_client", "memory", "memory_store", "presets", "providers", "rag", "scheduler", "server", "soul", "stt", "synthesis", "tasks", "telegram_bot", "threads", "tools", "tts", "turn_context", "updater", "utils", "vault"]

[tool.setuptools.package-data]
"*" = ["static/**/*", "schemas/*.yaml", "migrations/*.sql", "migrations/*.md"]

[tool.setuptools.exclude-package-data]
"*" = ["tests", "tests/*"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [".venv", "build", "dist", "uploads", "memory", "wiki"]

[tool.ruff.lint]
# Pragmatic selection: catch real bugs (F = pyflakes undefined/unused,
# B = bugbear likely-bugs, E/W = critical pycodestyle) without style-rule noise.
# Intentionally NOT enabling: UP (pyupgrade churn), I (import sorting churn),
# PL/N/D (pedantic style/naming/docstring).
select = ["E", "F", "W", "B"]
ignore = [
    # Line length: project has long readable SQL, prompt strings, URLs, and
    # prompt literals by design — reformatting would hurt readability.
    "E501",
    # f-strings without placeholders are used extensively as visual markers
    # (e.g. f"[DEBUG] something") — harmless and intentional stylistic choice.
    "F541",
    # Ambiguous single-letter variable names (l, I, O) — used in comprehensions
    # and short local scopes where context makes them clear.
    "E741",
    # Module-level imports after statements: intentional across server.py
    # (signal handler installed at top before heavy imports), agent.py /
    # agent_loop.py / tasks.py (deferred utils imports to dodge circular deps),
    # and vault.py (config import after crypto guards). Not a bug class here.
    "E402",
    # Compact `if cond: do()` / `x; y` style used in doctor checks and nonlocal
    # counters — readable and intentional, not a bug.
    "E701", "E702",
    # Bugbear rules that flag patterns used widely across the codebase and
    # aren't real bugs: loop-var-in-closure (B007/B023), default-factory-call
    # (B008, required by FastAPI Depends), raise-from (B904, noisy on wrapped
    # exceptions in legacy code paths).
    "B007", "B008", "B023", "B904",
]

[tool.ruff.lint.per-file-ignores]
# Legacy test files do sys.path.insert(...) before importing the modules under
# test, keep unused fixture imports, and use `assert False` for branches that
# should never execute — all intentional test idioms.
"tests/*" = ["E402", "F401", "F841", "B011"]

[tool.coverage.run]
# Measure top-level modules shipped by the package (mirrors py-modules above)
# plus the skills/ subpackage. Excluding tests/, build artefacts, the virtualenv
# and the static web bundle keeps the report focused on first-party code.
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "build/*",
    "dist/*",
    "static/*",
    "setup.py",
]

[tool.coverage.report]
# Don't count boilerplate or defensively unreachable lines against coverage.
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
# Floor: set 2pp below the measured baseline so unrelated PRs don't trip CI,
# but real regressions still do. Bump this up as coverage improves.
fail_under = 24
skip_covered = false
show_missing = true
